fixed overflow images on small screen

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 
 html {
   scroll-behavior: smooth;
-  /* font-size: 16px; */
 }
 
 body {
@@ -57,9 +56,17 @@ header {
   font-size: 2.5rem;
   flex-direction: column;
   text-align: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   transform: translateX(100%);
   transition: all 0.3s ease-out;
+}
+
+.menu-item {
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .menu-item span {
@@ -77,6 +84,10 @@ header {
   );
 }
 
+.menu-item li {
+  list-style: none;
+}
+
 nav {
   z-index: 99;
 }
@@ -89,7 +100,7 @@ main {
 }
 
 article {
-  width: 75%;
+  width: 85%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -105,6 +116,11 @@ article {
   flex-direction: column;
 }
 
+.article_text a {
+  display: flex;
+  justify-content: center;
+}
+
 h2 {
   font-size: 2.5rem;
   font-weight: 400;
@@ -114,8 +130,8 @@ h2 {
 h3 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin-bottom: 15px;
   text-align: center;
+  margin-bottom: 15px;
 }
 p {
   font-size: 1rem;
@@ -133,7 +149,7 @@ button {
   border-radius: 0.5rem;
   font-size: 1.5rem;
   font-weight: 500;
-  width: 50%;
+  width: 220px;
   align-self: center;
   cursor: pointer;
 }
@@ -172,8 +188,8 @@ button {
 .project-element-image.zamiasto {
   background-image: url(./images/zamiasto-thumbnail.png);
   width: 250px;
-  height: 250px;
-  margin: 25px;
+  height: 300px;
+  margin: 30px 100px;
 }
 
 .project-element-image.todo {
@@ -185,6 +201,7 @@ button {
 .project-element-image.github {
   background-image: url('./images/githumb-thumbnail.png');
   opacity: 0.9;
+  width: 250px;
 }
 
 .contact-element {
@@ -243,10 +260,6 @@ button {
   width: 20rem;
 }
 
-.menu-item li {
-  list-style: none;
-}
-
 .burger {
   height: 3rem;
   width: 3.5rem;
@@ -300,6 +313,7 @@ button {
 
   article {
     flex-direction: row;
+    width: 75%;
   }
 
   .menu {
@@ -319,6 +333,7 @@ button {
 
   .menu-item {
     width: 250px;
+    height: auto;
   }
 
   .menu-item span {
@@ -342,7 +357,6 @@ button {
     width: 1000px;
     flex-direction: row;
     justify-content: space-around;
-    /* gap: 50px; */
   }
   .project-element-image {
     width: 400px;
